--- a/main.ipynb
+++ b/main.ipynb
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "5fa54a06",
    "metadata": {},
    "outputs": [
@@ -3081,7 +3081,14 @@
     "# ------------------------------\n",
     "# PREDICT\n",
     "# ------------------------------\n",
-    "y_pred = model.predict(X_test)\n"
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "print(f\"Mean Squared Error on test set: {mse}\")\n",
+    "\n",
+    "# Mean squared error on training set\n",
+    "y_train_pred = model.predict(X_train)\n",
+    "print(f\"Mean Squared Error on training set: {mean_squared_error(y_train, y_train_pred)}\")\n"
    ]
   },
   {
@@ -3101,12 +3108,7 @@
     }
    ],
    "source": [
-    "mse = mean_squared_error(y_test, y_pred)\n",
-    "print(f\"Mean Squared Error on test set: {mse}\")\n",
     "\n",
-    "# Mean squared error on training set\n",
-    "y_train_pred = model.predict(X_train)\n",
-    "print(f\"Mean Squared Error on training set: {mean_squared_error(y_train, y_train_pred)}\")\n",
     "\n"
    ]
   },
